<?xml version="1.0"?>
<package>
  <name>lenti_angle</name>
  <version>1.0.0</version>
  <description>ROS package for reading of Lenticular Lens Displays from Fiducial Marker for angular camera position rating.</description>
  <maintainer email="fabian.eisele@posteo.de">Fabian Eisele</maintainer>
  <author email="fabian.eisele@posteo.de">Fabian Eisele</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar_sys</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>ar_sys</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
